package Library;

public interface RecordObserver {
    void onRecordUpdated(String modeName);
}
